@startuml
title 命令模式 (Command Pattern) - 智慧家居遙控系統

' --- 樣式設定 ---
skinparam classAttributeIconSize 0
skinparam monochrome false
skinparam packageStyle rectangle

skinparam class {
BackgroundColor White
ArrowColor #8e44ad
BorderColor #9b59b6
}

' --- 命令介面 (Command) ---
package "命令階層 (Commands)" {
interface Command {
+ {abstract} execute(): void
+ {abstract} undo(): void
}

class LightOnCommand implements Command {
    - light: Light
    + LightOnCommand(light: Light)
    + execute(): void
    + undo(): void
}

class LightOffCommand implements Command {
    - light: Light
    + LightOffCommand(light: Light)
    + execute(): void
    + undo(): void
}

class CeilingFanHighCommand implements Command {
    - ceilingFan: CeilingFan
    - prevSpeed: int
    + execute(): void
    + undo(): void
}

class NoCommand implements Command {
    + execute(): void
    + undo(): void
}


}

' --- 接收者 (Receivers) ---
package "家電設備 (Receivers)" {
class Light {
+ on(): void
+ off(): void
}

class CeilingFan {
    + {static} HIGH: int
    + {static} MEDIUM: int
    + {static} LOW: int
    + {static} OFF: int
    - speed: int
    + high(): void
    + medium(): void
    + low(): void
    + off(): void
    + getSpeed(): int
}

class Stereo {
    + on(): void
    + off(): void
    + setCd(): void
    + setVolume(v: int): void
}


}

' --- 請求者 (Invoker) ---
package "遙控器 (Invoker)" {
class RemoteControl {
- onCommands: Command[]
- offCommands: Command[]
- undoCommand: Command
+ setCommand(slot, onCommand, offCommand): void
+ onButtonWasPushed(slot): void
+ offButtonWasPushed(slot): void
+ undoButtonWasPushed(): void
}
}

' --- 關係連線 ---
RemoteControl o-- Command : 聚合 (持有命令清單)
LightOnCommand --> Light : 關聯 (持有接收者引用)
LightOffCommand --> Light : 關聯
CeilingFanHighCommand --> CeilingFan : 關聯

note top of Command : 命令介面：\n封裝了請求所需的資訊與動作。
note bottom of RemoteControl : 請求者：\n負責呼叫命令物件的 execute()，\n不需要知道誰是接收者。
note right of Light : 接收者：\n真正執行業務邏輯的物件。

@enduml